# hasherbench

./: .gitignore  Cargo.toml  LICENSE  README.md  evaluate.sh  refine_results.sh  rustdoc-extend.css  rustfmt.toml
.cargo/: config.toml
benches/: btreeset.rs  hashbrown_adler32.rs  hashbrown_ahasher.rs  hashbrown_bricolage.rs  hashbrown_cityhasher128.rs  hashbrown_cityhasher32.rs  hashbrown_cityhasher64.rs  hashbrown_djb2hasher.rs  hashbrown_farmhasher.rs  hashbrown_fnv1ahasher.rs  hashbrown_foldhash.rs  hashbrown_fxhasher64.rs  hashbrown_hashhasher.rs  hashbrown_highway.rs  hashbrown_inthasher.rs  hashbrown_lookup3hasher.rs  hashbrown_metrohash128.rs  hashbrown_metrohash64.rs  hashbrown_murmur3_128.rs  hashbrown_murmur3_128x64.rs  hashbrown_murmur3_32.rs  hashbrown_oaathasher.rs  hashbrown_rapidhasher.rs  hashbrown_sdbmhasher.rs  hashbrown_seahasher.rs  hashbrown_siphasher.rs  hashbrown_siphasher13.rs  hashbrown_spookyhasher.rs  hashbrown_wyhash.rs  hashbrown_xxhash32.rs  hashbrown_xxhash3_64.rs  hashbrown_xxhash64.rs  hashbrown_zwohash.rs  litemap.rs  std_hashset_adler32.rs  std_hashset_ahasher.rs  std_hashset_bricolage.rs  std_hashset_cityhasher128.rs  std_hashset_cityhasher32.rs  std_hashset_cityhasher64.rs  (+28 more)
benches/common/: framework.rs  hashsettrait.rs  keytype.rs  macros.rs  mod.rs
src/: lib.rs
